# CRXS

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README  clean.sh  example.cpp  example.py  example__xs_tools.py  example__xs_wrapper.py  link_python_package.sh  test_dbar.py  update_docu.sh
antiproton_data/scripts/: transform_pHe_XS.py  transform_pp_XS.py
cpp/: CMakeLists.txt  clean.sh  clike.cxx  clike.h  clike.i  formulas.txt  setup.py  setup_xs_tools.py  setup_xs_wrapper.py  xs_tools.cxx  xs_tools.h  xs_tools.i  xs_wrapper.cxx  xs_wrapper.h  xs_wrapper.i
cpp/data/: pbard_nar.dat.txt  pbardeut_total.dat.txt  pbarp_elastic.dat.txt  pbarp_total.dat.txt  plot_total_XS_interpolation_and_data.py  table_dpbar_tot.txt
cpp/src/: CMakeLists.txt  Makefile  crxs.cpp.in  crxs.h  linAlg_tools.cxx  linAlg_tools.h  xs.cxx  xs.h  xs_Dbar.cxx  xs_He3bar.cxx  xs_He4bar.cxx  xs_Hebar.cxx  xs_definitions.cxx  xs_definitions.h  xs_p.cxx  xs_pbar.cxx
cpp/src/example/: CMakeLists.txt  test.cpp
cpp/src/src/: Makefile  cmake_install.cmake
data/AMS02/: beryllium_ams02.txt  boron_ams02.txt  boverc_ams02.txt  carbon_ams02.txt  electron_ams02.txt  helium_ams02.txt  lithium_ams02.txt  nitrogen_ams02.txt  oxygen_ams02.txt  pbar_ams02.txt  positron_ams02.txt  proton_ams02.txt
data/ATIC02/: helium_atic.txt  proton_atic.txt
data/CS_dbar/: table_ppbar_tot.txt
data/CS_lab/: dT_HeHe_pbar_LAB_Duperray.txt  dT_HeHe_pbar_LAB_Duperray_USIN.txt  dT_HeHe_pbar_LAB_KR_PPFRAG.txt  dT_HeHe_pbar_LAB_Winkler.txt  dT_HeHe_pbar_LAB_WinklerWithHypWitNbar.txt  dT_HeHe_pbar_LAB_diMauro.txt  dT_Hep_pbar_LAB_DTUNUC_USIN.txt  dT_Hep_pbar_LAB_Duperray.txt  dT_Hep_pbar_LAB_Winkler.txt  dT_Hep_pbar_LAB_WinklerWithHypWitNbar.txt  dT_Hep_pbar_LAB_diMauro12.txt  dT_pHe_pbar_LAB_Duperray_USIN.txt  dT_pHe_pbar_LAB_KR_PPFRAG.txt  dT_pHe_pbar_LAB_Winkler.txt  dT_pHe_pbar_LAB_WinklerWithHypWitNbar.txt  dT_pp_Dbar_LAB.txt  dT_pp_Hebar_LAB.txt  dT_pp_p_LAB_Anderson.txt  dT_pp_p_LAB_Anderson_low.txt  dT_pp_pbar_LAB_DTUNUC_USIN.txt  dT_pp_pbar_LAB_Duperray.txt  dT_pp_pbar_LAB_Korsmeier.txt  dT_pp_pbar_LAB_TanNg.txt  dT_pp_pbar_LAB_diMauro.txt  dT_ppbar_Dbar_LAB.txt  dT_ppbar_Hebar_LAB.txt
data/CreamII/: carbon_cream.txt  helium_cream.txt  iron_cream.txt  magnesium_cream.txt  neon_cream.txt  nitrogen_cream.txt  oxygen_cream.txt  proton_cream.txt  silicon_cream.txt
data/HEAO/: magnesium_heao.txt  neon_heao.txt  nitrogen_heao.txt  oxygen_heao.txt  silicon_heao.txt
data/ISOMAX/: be9tobe10_isomax.txt
data/Pamela/: BoverC_pamela.txt  carbon_pamela.txt  helium_pamela.txt  pbar_pamela.txt  proton_pamela.txt
data/Voyager/: carbon_voyager_EkinPerNuc.txt  helium_voyager_EkinPerNuc.txt  proton_voyager_EkinPerNuc.txt
documentation/: Doxyfile
documentation/docu/: mainpage.dox
examples/: CRXS  example  example.cpp  example__xs_tools.py  example__xs_wrapper.py
examples/py2/: CRXS  example__xs_wrapper.py
examples/py3/: CRXS  example__xs_tools.py  example__xs_wrapper.py
html/: annotated.html  class_c_r_x_s_1_1_x_s-members.html  class_c_r_x_s_1_1_x_s.html  class_c_r_x_s_1_1_x_s__definitions-members.html  class_c_r_x_s_1_1_x_s__definitions.html  classes.html  dir_7837fde3ab9c1fb2fc5be7b717af8d79.html  dir_7e72c7cf48e3493f8206cd364e6bc9f6.html  dir_df511e5bd85cec96854b39d5e1c27aa8.html  files.html  formula.repository  functions.html  functions_func.html  index.html  menudata.js  namespace_x_s__tools.html  namespace_x_s__wrapper.html  namespacemembers.html  namespacemembers_func.html  namespaces.html  namespacesetup__xs__tools.html  namespacesetup__xs__wrapper.html  xs_8h_source.html  xs__definitions_8h_source.html  xs__tools_8h_source.html  xs__wrapper_8h_source.html
html/search/: all_0.js  all_1.js  all_3.js  all_5.js  all_6.js  all_7.js  all_8.js  classes_0.js  functions_1.js  functions_2.js  functions_4.js  namespaces_1.js  pages_0.js  searchdata.js
libraries/: CMakeLists.txt  definitions.h
libraries/configHandler/: configHandler.cpp  configHandler.h  configTest.cpp
libraries/crossSectionTransformations/: crossSectionTransformations.h
libraries/crossSections/: crossSections.cpp  crossSections.h  labCrossSectionTabulator.cpp  labCrossSectionTabulator.h
libraries/dmEnergySpectra/: dmEnergySpectra.cpp  dmEnergySpectra.h
libraries/fileTools/: fileTools.cpp  fileTools.h  tester.cpp
libraries/graph/: graph.cpp  graph.h
libraries/lisFluxes/: lisFluxes.cpp  lisFluxes.h
libraries/ppCrossSectionParametrizations/: ppCrossSectionParametrizations.cpp  ppCrossSectionParametrizations.h
libraries/readCSData/: readCSData.cpp  readCSData.h
libraries/readFluxes/: readFluxes.cpp  readFluxes.h
libraries/sourceTerm/: sourceTerm.cpp  sourceTerm.h
programms/: CMakeLists.txt
programms/antiMatter/: CMakeLists.txt  antiMatter.cpp
programms/crossSectionCalculator/: CMakeLists.txt  crossSectionCalculator.cpp  crossSectionTester_old.cpp
programms/crossSectionFitter/: CMakeLists.txt  crossSectionFitter.cpp  crossSectionMultiNest.cpp  crossSectionMultiNest_old.cpp
programms/lisFluxFitter/: CMakeLists.txt  lisFluxFitter.cpp
programms/sourceTermCalculator/: CMakeLists.txt  sourceTermCalculator.cpp
programms/uncertaintyCalculator/: CMakeLists.txt  uncertaintyCalculator.cpp  uncertaintyCalculator_old.cpp  uncertaintyCalculator_v1.cpp
py2/: XS_tools.py  info.py
py2/cpp/: numpy.i  setup_xs_wrapper.py  (+5 more)
py3/: XS_wrapper.py
python/: XS_pp_gamma.py  XS_tools.py  XS_tools.py.in  XS_wrapper.py  XS_wrapper.py.in  info.py
scripts/: CRACS_AntiMatter.py  CRACS_AntiMatterCounter.py  CRACS_AntiMatterCounter_II.py  CRACS_AntiMatterPropa.py  CRACS_CrossSectionComparison.py  CRACS_DbarProp.py  CRACS_crossSectionComparison_old.py  CRACS_crossSectionFitter.py  CRACS_crossSectionMultiNest.py  CRACS_lisFluxFitter.py  CRACS_plotCS_2D.py  CRACS_sourceTermCalculator.py  CRACS_transform_pBe_CS.py  CRACS_transform_pC_CS.py  CRACS_transform_pHe_CS.py  CRACS_transform_pp_CS.py  CRACS_uncertainty.py  CRACS_uncertainty_new.py  PlotFunctions.py  multinest_plot_functions.py
test/: pp_cross.dat.txt  test.py
write_kdd18_tab/: write.py
(+146 files in other folders)
